# advent-of-code

./: .gitignore  README.md  advent-of-code.cabal  stack.yaml
src/: AdventOfCode.hs
src/2017/Day01/: Main.hs
src/2017/Day02/: Main.hs
src/2017/Day03/: Main.hs
src/2017/Day04/: Main.hs
src/2017/Day05/: Main.hs
src/2018/Day01/: Main.hs
src/2018/Day02/: Main.hs
src/2018/Day03/: Main.hs
src/2018/Day04/: Main.hs
src/2019/Day01/: Main.hs
src/2019/Day02/: Main.hs
src/2019/Day03/: Main.hs
src/2019/Day04/: Main.hs
src/2019/Day05/: Main.hs
src/AdventOfCode/: Parser.hs
