name:                advent-of-code
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/joshuaclayton/advent-of-code#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/joshuaclayton/advent-of-code#readme>

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec >= 7.0.4 && < 8
  exposed-modules:     AdventOfCode
  other-modules:       AdventOfCode.Parser
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/advent-of-code
